Grid-Scrollbar- Issue fixed Dropdown-Morefilters-Issue fixed

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -77,6 +77,9 @@ label {
         text-decoration: none;
     }
 }
+.ag-body-container{
+  height:auto !important;
+}
 .login_text {
         margin-top: 30%;
     float: left;
